@@ -123,13 +123,14 @@ TODO:
   * i18n
   * RTL support
   * scroll instead of zoom?
+  * use graphical error messages
 
 BUGS:
+  * something wrong with new start block after clear all
   * don't save full-sized bitmap to session
   * fix canvas sizing, resizing
   * cannot open same file twice in a row (no change event?)
   * occasional misplaced DOM textarea
-  * occasional misplaced highlight filler
   * occasional bad init
   * fill broken in save to SVG
   * reposition trash, buttons in portrait mode
